--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "howler": "^2.2.4",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.0",
     "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
@@ -22,9 +21,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
-    "redux": "^4.2.1",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^5.1.0"
   },
